--- a/PeliculasDisney/Views/Personajes/Index.cshtml
+++ b/PeliculasDisney/Views/Personajes/Index.cshtml
@@ -6,12 +6,20 @@
 
 <h1>Personajes</h1>
 <div class="container">
+    @if(TempData["mensaje"]!= null)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @TempData["mensaje"]
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
     <div class="row">
 
         <div class="col-sm-6">
             <h3>
                 Lista de Personajes
-                <img src="~/img/logo.png" alt="" width="45" height="40">
             </h3>
         </div>
         <div class="col-sm-6">
