--- a/PeliculasDisney/Views/Shared/_Layout.cshtml
+++ b/PeliculasDisney/Views/Shared/_Layout.cshtml
@@ -25,7 +25,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Personajes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">CRUD Personajes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Lista de Personajes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Lista de Peliculas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">CRUD Peliculas</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
