--- a/PeliculasDisney/Views/Shared/_Layout.cshtml
+++ b/PeliculasDisney/Views/Shared/_Layout.cshtml
@@ -19,11 +19,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Detalle">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">CRUD Personajes</a>
                         </li>
@@ -31,11 +29,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Lista de Personajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Lista de Peliculas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Create">Lista de Peliculas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">CRUD Peliculas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Index">CRUD Peliculas</a>
                         </li>
+                     
+                       
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
