--- a/PeliculasDisney/Views/Personajes/Detalle.cshtml
+++ b/PeliculasDisney/Views/Personajes/Detalle.cshtml
@@ -21,29 +21,29 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Nombre" class="control-label"></label>
-                    <input asp-for="Nombre" class="form-control" disabled/>
+                    <input asp-for="Nombre" class="form-control" disabled />
                     <span asp-validation-for="Nombre" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Peso" class="control-label"></label>
-                    <input asp-for="Peso" class="form-control" disabled/>
+                    <input asp-for="Peso" class="form-control" disabled />
                     <span asp-validation-for="Peso" class="text-danger"></span>
 
                 </div>
                 <div class="form-group">
                     <label asp-for="PeliculasAsociadas" class="control-label"></label>
-                    <input asp-for="PeliculasAsociadas" class="form-control" disabled/>
+                    <input asp-for="PeliculasAsociadas" class="form-control" disabled />
                     <span asp-validation-for="PeliculasAsociadas" class="text-danger"></span>
 
                 </div>
                 <div class="form-group">
                     <label asp-for="Edad" class="control-label"></label>
-                    <input asp-for="Edad" class="form-control" disabled/>
+                    <input asp-for="Edad" class="form-control" disabled />
                     <span asp-validation-for="Edad" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Historia" class="control-label"></label>
-                    <input asp-for="Historia" class="form-control" disabled/>
+                    <input asp-for="Historia" class="form-control" disabled />
                     <span asp-validation-for="Historia" class="text-danger"></span>
 
                 </div>
@@ -53,4 +53,6 @@
     </div>
 </div>
 
-
+<div>
+    <a asp-controller="Home" asp-action="Index">Volver</a>
+</div>
