--- a/PeliculasDisney/Views/Shared/_Layout.cshtml
+++ b/PeliculasDisney/Views/Shared/_Layout.cshtml
@@ -19,17 +19,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Detalle">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">CRUD Personajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="Index">Lista de Personajes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personajes" asp-action="ListaPersonajes">Lista de Personajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Create">Lista de Peliculas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="ListaPeliculas">Lista de Peliculas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Peliculas" asp-action="Index">CRUD Peliculas</a>
