--- a/PeliculasDisney/Views/Peliculas/Create.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Create.cshtml
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <label asp-for="Imagen" class="control-label"></label>
 
-                <input type="file" accept=".png,.jpg,.jpeg" asp-for="Imagen" class="form-control" id="customFile" name="subir"
+                <input type="file" accept=".png,.jpg,.jpeg" asp-for="Imagen" class="form-control" id="customFile" name="imagen"
                        style="border:0px !important;padding:0px;padding-top:10px;padding-bottom:30px;"
                        onchange="document.getElementById('imagen').src = window.URL.createObjectURL(this.files[0])" />
 
@@ -44,7 +44,7 @@
 
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
