--- a/PeliculasDisney/Views/Personajes/Index.cshtml
+++ b/PeliculasDisney/Views/Personajes/Index.cshtml
@@ -19,7 +19,7 @@
 
         <div class="col-sm-6">
             <h3>
-                Lista de Personajes
+               Crud Personajes
             </h3>
         </div>
         <div class="col-sm-6">
