--- a/PeliculasDisney/Views/Peliculas/Detalle.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Detalle.cshtml
@@ -8,7 +8,7 @@
 <h1>Detalle</h1>
 
 <div>
-    <h4>Pelicula</h4>
+    <h4>Pelicula:  @Html.DisplayFor(model => model.Titulo)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
