--- a/PeliculasDisney/Views/Personajes/Detalle.cshtml
+++ b/PeliculasDisney/Views/Personajes/Detalle.cshtml
@@ -54,5 +54,5 @@
 </div>
 
 <div>
-    <a asp-controller="Home" asp-action="Index">Volver</a>
+    <a asp-controller="Personajes" asp-action="ListaPersonajes">Volver</a>
 </div>
