--- a/PeliculasDisney/Views/Peliculas/Delete.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Delete.cshtml
@@ -45,7 +45,7 @@
     
     <form asp-action="DeletePelicula">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
         <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
