--- a/PeliculasDisney/Views/Peliculas/Edit.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Editar Pelicula</h1>
 
 <h4>Pelicula</h4>
 <hr />
@@ -40,7 +40,7 @@
                 <span asp-validation-for="Imagen" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
