--- a/PeliculasDisney/Views/Peliculas/Index.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Index.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayFor(modelItem => item.Calificacion)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Imagen)
+                    @item.Imagen
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
