--- a/PeliculasDisney/Views/Personajes/Index.cshtml
+++ b/PeliculasDisney/Views/Personajes/Index.cshtml
@@ -6,16 +6,6 @@
 
 <h1>Personajes</h1>
 
-<div class="container">
-    @if(TempData["mensaje"]!= null)
-    {
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            @TempData["mensaje"]
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    }
     <div class="row">
 
         <div class="col-sm-6">
@@ -24,7 +14,7 @@
             </h3>
         </div>
         <div class="col-sm-6">
-            <a class="btn btn-success d-block" asp-action="Create" asp-controller="Personajes">Agregar Personaje</a>
+            <a class="btn btn-info d-block" asp-action="Create" asp-controller="Personajes">Agregar Personaje</a>
         </div>
     </div>
 
@@ -103,7 +93,6 @@
         }
     </div>
 
-</div>
 <div>
     <a asp-controller="Home" asp-action="Index">Volver</a>
 </div>
