--- a/PeliculasDisney/Views/Peliculas/Edit.cshtml
+++ b/PeliculasDisney/Views/Peliculas/Edit.cshtml
@@ -11,38 +11,43 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="PersonajesAsociados" class="control-label"></label>
-                <input asp-for="PersonajesAsociados" class="form-control" />
-                <span asp-validation-for="PersonajesAsociados" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Titulo" class="control-label"></label>
-                <input asp-for="Titulo" class="form-control" />
-                <span asp-validation-for="Titulo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaCreacion" class="control-label"></label>
-                <input asp-for="FechaCreacion" class="form-control" />
-                <span asp-validation-for="FechaCreacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Calificacion" class="control-label"></label>
-                <input asp-for="Calificacion" class="form-control" />
-                <span asp-validation-for="Calificacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Imagen" class="control-label"></label>
-                <input asp-for="Imagen" class="form-control" />
-                <span asp-validation-for="Imagen" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-            </div>
-        </form>
+        <form method="post" enctype="multipart/form-data" asp-action="Edit">
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="PersonajesAsociados" class="control-label"></label>
+                    <input asp-for="PersonajesAsociados" class="form-control" />
+                    <span asp-validation-for="PersonajesAsociados" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Titulo" class="control-label"></label>
+                    <input asp-for="Titulo" class="form-control" />
+                    <span asp-validation-for="Titulo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaCreacion" class="control-label"></label>
+                    <input asp-for="FechaCreacion" class="form-control" />
+                    <span asp-validation-for="FechaCreacion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Calificacion" class="control-label"></label>
+                    <input asp-for="Calificacion" class="form-control" />
+                    <span asp-validation-for="Calificacion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Imagen" class="control-label"></label>
+
+                    <input type="file" accept=".png,.jpg,.jpeg" asp-for="Imagen" class="form-control" id="customFile" name="subir"
+                           style="border:0px !important;padding:0px;padding-top:10px;padding-bottom:30px;"
+                           onchange="document.getElementById('imagen').src = window.URL.createObjectURL(this.files[0])" />
+
+                    <span asp-validation-for="Imagen" class="text-danger"></span>
+
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
     </div>
 </div>
 
